force-app/main/default/objects/Case/fields/Folder_Setup_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Folder_Setup_Completion_Date__c</fullName>
    <description>The date the Folder Setup is complete</description>
    <label>Folder Setup Completion Date</label>
    <type>Date</type>
</CustomField>