force-app/main/default/objects/Case/fields/Global_Contact_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Global_Contact_Exclusions__c</fullName>
    <label>Global Contact Exclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No Print  Cathleen Kellogg</fullName>
            </value>
            <value>
                <fullName>No Email  Cathleen Kellogg</fullName>
            </value>
            <value>
                <fullName>No Outbound Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>