force-app/main/default/objects/Case/fields/Implementation_Training__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Training__c</fullName>
    <label>Implementation Training</label>
    <type>Date</type>
</CustomField>