force-app/main/default/objects/Case/fields/Initial_Activation_Call__c.field-meta.xml
<CustomField>
    <fullName>Initial_Activation_Call__c</fullName>
    <label>Initial Engagement Call</label>
    <type>Date</type>
</CustomField>