force-app/main/default/objects/Case/fields/Initial_Implementation_Call__c.field-meta.xml
<CustomField>
    <fullName>Initial_Implementation_Call__c</fullName>
    <description>Date Initial Implementation Call Occurs</description>
    <label>Initial Implementation Call</label>
    <type>Date</type>
</CustomField>