force-app/main/default/objects/Case/fields/Initial_Internal_Implementation_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Initial_Internal_Implementation_Meeting__c</fullName>
    <label>Initial Internal Implementation Meeting</label>
    <type>Date</type>
</CustomField>