force-app/main/default/objects/Case/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <label>Initiatives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intro</fullName>
            </value>
            <value>
                <fullName>Repayment</fullName>
            </value>
            <value>
                <fullName>Delinquency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>