force-app/main/default/objects/Case/fields/Invoicing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Profile__c</fullName>
    <label>Invoicing Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>