force-app/main/default/objects/Case/fields/Invoicing_Set_up_Form__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Set_up_Form__c</fullName>
    <description>Customer Setup Invoicing Form, required for Customer setup in Lawson for Invoicing.</description>
    <label>Invoicing Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>