force-app/main/default/objects/Case/fields/Last_Inbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Message__c</fullName>
    <description>Read-only Date/time field populated by workflow each time a new inbound email message is received.</description>
    <label>Last Inbound Message</label>
    <type>DateTime</type>
</CustomField>