force-app/main/default/objects/Case/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sub</fullName>
            </value>
            <value>
                <fullName>Unsub</fullName>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
            <value>
                <fullName>Grad PLUS</fullName>
            </value>
            <value>
                <fullName>Perkins</fullName>
            </value>
            <value>
                <fullName>MA - NIL</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>