force-app/main/default/objects/Case/fields/logo_published__c.field-meta.xml
<CustomField>
    <fullName>logo_published__c</fullName>
    <description>Date logo was published</description>
    <label>Logo Published</label>
    <type>Date</type>
</CustomField>