force-app/main/default/objects/Case/fields/Logo_Specs_Sent__c.field-meta.xml
<CustomField>
    <fullName>Logo_Specs_Sent__c</fullName>
    <label>Logo Specs Sent</label>
    <type>Date</type>
</CustomField>