force-app/main/default/objects/Case/fields/Logo_Specs_Status__c.field-meta.xml
<CustomField>
    <fullName>Logo_Specs_Status__c</fullName>
    <label>Logo Specs Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>