force-app/main/default/objects/Case/fields/Logo_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Logo_Submitted__c</fullName>
    <description>Date the logo was submitted to marketing.</description>
    <label>Logo Submitted</label>
    <type>Date</type>
</CustomField>