force-app/main/default/objects/Case/fields/Logos_Received__c.field-meta.xml
<CustomField>
    <fullName>Logos_Received__c</fullName>
    <label>Logos Received</label>
    <type>Date</type>
</CustomField>