force-app/main/default/objects/Case/fields/MM101_Buy_off__c.field-meta.xml
<CustomField>
    <fullName>MM101_Buy_off__c</fullName>
    <label>SALT Courses Buy off</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>