force-app/main/default/objects/Case/fields/MM_101_Customization_Call__c.field-meta.xml
<CustomField>
    <fullName>MM_101_Customization_Call__c</fullName>
    <label>SALT Courses Customization Call</label>
    <type>Date</type>
</CustomField>