force-app/main/default/objects/Case/fields/MM_101_Customization_Set_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>MM_101_Customization_Set_Up_Status__c</fullName>
    <label>SALT Courses Customization Set Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>