force-app/main/default/objects/Case/fields/MM_101_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>MM_101_Demo_Date__c</fullName>
    <label>SALT Courses Demo Date</label>
    <type>Date</type>
</CustomField>