force-app/main/default/objects/Case/fields/MM_101_Staging_Status__c.field-meta.xml
<CustomField>
    <fullName>MM_101_Staging_Status__c</fullName>
    <label>SALT Courses Staging Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>