force-app/main/default/objects/Case/fields/MPN_Serialization_link__c.field-meta.xml
<CustomField>
    <fullName>MPN_Serialization_link__c</fullName>
    <label>Serialization Parent Link</label>
    <type>Url</type>
</CustomField>