force-app/main/default/objects/Case/fields/Multi_Campus_Codes__c.field-meta.xml
<CustomField>
    <fullName>Multi_Campus_Codes__c</fullName>
    <inlineHelpText>Please enter the various OE branch codes that comprise the multi-campuses of SALT.</inlineHelpText>
    <label>Multi-Campus Codes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>