force-app/main/default/objects/Case/fields/My_Money_101_Courses__c.field-meta.xml
<CustomField>
    <fullName>My_Money_101_Courses__c</fullName>
    <label>SALT Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Banking Basics</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Credit Score</fullName>
            </value>
            <value>
                <fullName>Identity Theft</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Student Loans</fullName>
            </value>
            <value>
                <fullName>Repayment Options</fullName>
            </value>
            <value>
                <fullName>Financial Goals</fullName>
            </value>
            <value>
                <fullName>Entrance Counseling</fullName>
            </value>
            <value>
                <fullName>Grad level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>