force-app/main/default/objects/Case/fields/Need_for_campus_meeting__c.field-meta.xml
<CustomField>
    <fullName>Need_for_campus_meeting__c</fullName>
    <label>Need for campus meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>