force-app/main/default/objects/Case/fields/Need_for_sponsorship_assistance__c.field-meta.xml
<CustomField>
    <fullName>Need_for_sponsorship_assistance__c</fullName>
    <label>Need for sponsorship assistance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>