force-app/main/default/objects/Case/fields/Netforum_Profile_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Netforum_Profile_Creation_Date__c</fullName>
    <description>The date that the netforum (avectra) profile is complete.</description>
    <label>Netforum Profile Creation Date</label>
    <type>Date</type>
</CustomField>