force-app/main/default/objects/Case/fields/New_Message_Indicator__c.field-meta.xml
<CustomField>
    <fullName>New_Message_Indicator__c</fullName>
    <description>If &quot;New Message Received&quot; is true this will show a red flag.</description>
    <formula>IF(New_Message_Received__c = TRUE,
IMAGE(&quot;https://c.na26.content.force.com/servlet/servlet.ImageServer?id=01532000001pTaQ&amp;oid=00D3C0000000R5x&amp;lastMod=1489646535000&quot;,&quot;red flag&quot;,30,30),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Message Indicator</label>
    <type>Text</type>
</CustomField>