force-app/main/default/objects/Case/fields/New_Message_Received__c.field-meta.xml
<CustomField>
    <fullName>New_Message_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox controlled by workflow.  It is set to true on a new inbound emailmessage (whether from the customer or anyone else), and set to false by sending an outbound message or marking the case resolved.</description>
    <label>New Message Received</label>
    <type>Checkbox</type>
</CustomField>