force-app/main/default/objects/Case/fields/NSLDS_Access_Status__c.field-meta.xml
<CustomField>
    <fullName>NSLDS_Access_Status__c</fullName>
    <label>NSLDS Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - School Provided</fullName>
            </value>
            <value>
                <fullName>2 - Confidentiality Auth Form Rcvd</fullName>
            </value>
            <value>
                <fullName>3 - Bus Analysis NPI Provided</fullName>
            </value>
            <value>
                <fullName>4 - ASA Rcvd User Docs</fullName>
            </value>
            <value>
                <fullName>5 - ASA Returns to SAIG</fullName>
            </value>
            <value>
                <fullName>6 - Received SAIG Access</fullName>
            </value>
            <value>
                <fullName>7 - Access Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>