force-app/main/default/objects/Case/fields/NSLDS_Access_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>NSLDS_Access_Status_Date__c</fullName>
    <description>Date NSLDS Access was created.</description>
    <label>NSLDS Access Status Date</label>
    <type>Date</type>
</CustomField>