force-app/main/default/objects/Case/fields/NSLDS_Authorization_Sent__c.field-meta.xml
<CustomField>
    <fullName>NSLDS_Authorization_Sent__c</fullName>
    <label>NSLDS Auth Sent</label>
    <type>Date</type>
</CustomField>