force-app/main/default/objects/Case/fields/ODS_ID__c.field-meta.xml
<CustomField>
    <fullName>ODS_ID__c</fullName>
    <label>ODS ID:</label>
    <length>5</length>
    <type>Text</type>
</CustomField>