force-app/main/default/objects/Case/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <label>Opportunity Link</label>
    <type>Url</type>
</CustomField>