force-app/main/default/objects/Case/fields/Original_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Go_Live_Date__c</fullName>
    <label>Original Go-Live Date</label>
    <type>Date</type>
</CustomField>