force-app/main/default/objects/Case/fields/Performance_Based_Fees__c.field-meta.xml
<CustomField>
    <fullName>Performance_Based_Fees__c</fullName>
    <label>Performance Based Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>