force-app/main/default/objects/Case/fields/PGP_Email_Setup__c.field-meta.xml
<CustomField>
    <fullName>PGP_Email_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGP Email Setup</label>
    <type>Checkbox</type>
</CustomField>