force-app/main/default/objects/Case/fields/PGP_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>PGP_Set_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGP Set Up</label>
    <type>Checkbox</type>
</CustomField>