force-app/main/default/objects/Case/fields/PGP_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>PGP_Set_Up_Date__c</fullName>
    <label>PGP Set Up Date</label>
    <type>Date</type>
</CustomField>