force-app/main/default/objects/Case/fields/President_s_Welcome_Call__c.field-meta.xml
<CustomField>
    <fullName>President_s_Welcome_Call__c</fullName>
    <label>President&#39;s Welcome Call</label>
    <type>Date</type>
</CustomField>