force-app/main/default/objects/Case/fields/President_s_Welcome_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>President_s_Welcome_Letter_Sent__c</fullName>
    <label>President&#39;s Welcome Letter Sent</label>
    <type>Date</type>
</CustomField>