force-app/main/default/objects/Case/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <description>Used to store previous value of the case owner.</description>
    <formula>IF( LEFT(Previous_Owner_Id__c, 3) == &#39;00G&#39; , 
     HYPERLINK(&quot;p/own/Queue/d?id=&quot;+Previous_Owner_Id__c,  Previous_Owner_Name__c ),
     HYPERLINK(&quot;/&quot;+Previous_Owner_Id__c,  Previous_Owner_Name__c )
)</formula>
    <label>Previous Owner</label>
    <type>Text</type>
</CustomField>