force-app/main/default/objects/Case/fields/Previous_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Id__c</fullName>
    <label>Previous Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>