force-app/main/default/objects/Case/fields/Previous_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Name__c</fullName>
    <label>Previous Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>