force-app/main/default/objects/Case/fields/Previous_Owner_Name_Support__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Name_Support__c</fullName>
    <formula>Owner:Queue.QueueName +Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Owner Name Support</label>
    <type>Text</type>
</CustomField>