force-app/main/default/objects/Case/fields/Profile_Creation_date__c.field-meta.xml
<CustomField>
    <fullName>Profile_Creation_date__c</fullName>
    <label>Profile Creation Date</label>
    <type>Date</type>
</CustomField>