force-app/main/default/objects/Case/fields/Profile_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Creation_Status__c</fullName>
    <label>Profile Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>