force-app/main/default/objects/Case/fields/Promo_Tile_Published__c.field-meta.xml
<CustomField>
    <fullName>Promo_Tile_Published__c</fullName>
    <description>Date promo tile was published.</description>
    <label>Promo Tile Published</label>
    <type>Date</type>
</CustomField>