force-app/main/default/objects/Case/fields/Promo_Tile_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Promo_Tile_Submitted__c</fullName>
    <description>Date the promo tile was submitted to product management.</description>
    <label>Promo Tile Submitted</label>
    <type>Date</type>
</CustomField>