force-app/main/default/objects/Case/fields/PS_Offerings__c.field-meta.xml
<CustomField>
    <fullName>PS_Offerings__c</fullName>
    <label>PS Offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>