force-app/main/default/objects/Case/fields/Reason_For_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_First_Contact__c</fullName>
    <description>This field will allow an agent to select the reason(s) why the customer first called in.</description>
    <label>Reason For Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College Planning/Paying For College</fullName>
            </value>
            <value>
                <fullName>Consolidation and Refinance</fullName>
            </value>
            <value>
                <fullName>Resolving Delinquent Student Loans</fullName>
            </value>
            <value>
                <fullName>Forgiveness For Student Loans</fullName>
            </value>
            <value>
                <fullName>General Student Loan Repayment</fullName>
            </value>
            <value>
                <fullName>General Financial Information (Budgeting, Credit, Saving, etc.)</fullName>
            </value>
            <value>
                <fullName>Salt Site Support</fullName>
            </value>
            <value>
                <fullName>Career Counseling</fullName>
            </value>
            <value>
                <fullName>Product Enhancement</fullName>
            </value>
            <value>
                <fullName>College Counseling</fullName>
            </value>
            <value>
                <fullName>Vocational Path Training</fullName>
            </value>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>Career Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>