force-app/main/default/objects/Case/fields/Reassignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Reason__c</fullName>
    <description>Please provide a reason as to why a case is being reassigned.</description>
    <label>Reassignment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skillset</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Manager Reassignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>