force-app/main/default/objects/Case/fields/Reports__c.field-meta.xml
<CustomField>
    <fullName>Reports__c</fullName>
    <label>Reports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Communication Results</fullName>
            </value>
            <value>
                <fullName>Portfolio Profile</fullName>
            </value>
            <value>
                <fullName>Risk Analysis</fullName>
            </value>
            <value>
                <fullName>Portfolio Management</fullName>
            </value>
            <value>
                <fullName>Projected CDR</fullName>
            </value>
            <value>
                <fullName>Portfolio Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>